--- a/index.html
+++ b/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<meta charset="UTF-8" />
+    <title>Form with Table Layout</title>
+    <meta charset="UTF-8" />
 </head>
 <body>
-
+    <h1>Workshop #HTML-FORM</h1>
+    <form>
+        <table>
+            <tr>
+                <td><label for="fname">ชื่อ</label></td>
+                <td><input type="text" id="fname" name="fname"></td>
+            </tr>
+            <tr>
+                <td><label for="lname">สกุล</label></td>
+                <td><input type="text" id="lname" name="lname"></td>
+            </tr>
+            <tr>
+                <td><label for="birthday">วัน/เดือน/ปีเกิด</label></td>
+                <td><input type="date" id="birthday" name="birthday"></td>
+            </tr>
+            <tr>
+                <td><label for="age">อายุ</label></td>
+                <td><input type="number" id="age" name="age"></td>
+            </tr>
+            <tr>
+                <td><label for="sex">เพศ</label></td>
+                <td>
+                    <input type="radio" id="male" name="sex" value="male">
+                    <label for="male">ชาย</label>
+                    <input type="radio" id="female" name="sex" value="female">
+                    <label for="female">หญิง</label>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="picture">รูป</label></td>
+                <td><input type="file" id="picture" name="picture"></td>
+            </tr>
+            <tr>
+                <td><label for="address">ที่อยู่</label></td>
+                <td><textarea rows="4" cols="30" id="address" name="address"></textarea></td>
+            </tr>
+            <tr>
+                <td><label for="fav_color">สีที่ชอบ</label></td>
+                <td>
+                    <select id="fav_color" name="fav_color" size="1">
+                        <option value="red">สีแดง</option>
+                        <option value="green">สีเขียว</option>
+                        <option value="blue">สีน้ำเงิน</option>
+                        <option value="yellow">สีเหลือง</option>
+                        <option value="black">สีดำ</option>
+                        <option value="white">สีขาว</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="fav_song">แนวเพลงที่ชอบ</label></td>
+                <td>
+                    <input type="radio" id="mor-lum" name="fav_song" value="mor-lum">
+                    <label for="mor-lum">หมอลำ</label>
+                    <input type="radio" id="forlife" name="fav_song" value="forlife">
+                    <label for="forlife">เพื่อชีวิต</label>
+                    <input type="radio" id="etc" name="fav_song" value="etc">
+                    <label for="etc">อื่นๆ</label>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <br>
+                    <input type="checkbox" id="permission" name="permission">
+                    <label for="permission">ยินยอมให้เก็บข้อมูล</label>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <br>
+                    <input type="reset" value="Reset">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                    <input type="submit" value="Submit">
+                </td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
