--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <tr>
                 <td><label for="fav_song">แนวเพลงที่ชอบ</label></td>
                 <td>
-                    <input type="radio" id="mor-lum" name="fav_song" value="mor-lum">
-                    <label for="mor-lum">หมอลำ</label>
                     <input type="radio" id="forlife" name="fav_song" value="forlife">
                     <label for="forlife">เพื่อชีวิต</label>
+                    <input type="radio" id="EsanSong" name="fav_song" value="EsanSong">
+                    <label for="EsanSong">ลูกทุ่ง</label>
                     <input type="radio" id="etc" name="fav_song" value="etc">
                     <label for="etc">อื่นๆ</label>
                 </td>
