--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Form with Table Layout</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <h1>Workshop #HTML-FORM</h1>
