--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Form with Table Layout</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="mystyle.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
+        </style>
 </head>
 <body>
     <h1>Workshop #HTML-FORM</h1>
