--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="mystyle.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
-        </style>
+    </style>
 </head>
 <body>
-    <h1>Workshop #HTML-FORM</h1>
+    <h1>WORKSHOP #HTML-FORM</h1>
     <form>
         <table>
             <tr>
