--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form with Table Layout</title>
+    <title>66160356</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="mystyle.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
+
+body {
+    font-family: 'Parkinsans', sans-serif;
+    background-color: #f9f9f9;
+    margin: 20px;
+    background-image: url('img/background.JPG');
+}
+
+h1 {
+    text-align: center;
+    color: #4a90e2;
+}
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+td:hover{
+    color: #1e90ff;
+}
+input:hover {
+    background-color : #dcdcdc;;
+    border-color: #4a6378;
+    box-shadow: 0 0 8px grey;
+;
+}
+textarea:hover{
+    background-color: #dcdcdc;
+    border-color: #4a6378;
+    box-shadow: 0 0 8px grey;
+}
+
     </style>
 </head>
 <body>
