--- a/index.html
+++ b/index.html
@@ -1,127 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>66160356</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="mystyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Workshop #HTML-FORM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
-
-body {
-    font-family: 'Parkinsans', sans-serif;
-    background-color: #f9f9f9;
-    margin: 20px;
-    background-image: url('img/background.JPG');
-}
-
-h1 {
-    text-align: center;
-    color: #4a90e2;
-}
-
-form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-td:hover{
-    color: #1e90ff;
-}
-input:hover {
-    background-color : #dcdcdc;;
-    border-color: #4a6378;
-    box-shadow: 0 0 8px grey;
-;
-}
-textarea:hover{
-    background-color: #dcdcdc;
-    border-color: #4a6378;
-    box-shadow: 0 0 8px grey;
-}
-
+        body{
+            background-image: url('img/background.JPG');
+        }
     </style>
 </head>
+
 <body>
-    <h1>WORKSHOP #HTML-FORM</h1>
-    <form>
-        <table>
-            <tr>
-                <td><label for="fname">ชื่อ</label></td>
-                <td><input type="text" id="fname" name="fname"></td>
-            </tr>
-            <tr>
-                <td><label for="lname">สกุล</label></td>
-                <td><input type="text" id="lname" name="lname"></td>
-            </tr>
-            <tr>
-                <td><label for="birthday">วัน/เดือน/ปีเกิด</label></td>
-                <td><input type="date" id="birthday" name="birthday"></td>
-            </tr>
-            <tr>
-                <td><label for="age">อายุ</label></td>
-                <td><input type="number" id="age" name="age"></td>
-            </tr>
-            <tr>
-                <td><label for="sex">เพศ</label></td>
-                <td>
-                    <input type="radio" id="male" name="sex" value="male">
-                    <label for="male">ชาย</label>
-                    <input type="radio" id="female" name="sex" value="female">
-                    <label for="female">หญิง</label>
-                </td>
-            </tr>
-            <tr>
-                <td><label for="picture">รูป</label></td>
-                <td><input type="file" id="picture" name="picture"></td>
-            </tr>
-            <tr>
-                <td><label for="address">ที่อยู่</label></td>
-                <td><textarea rows="4" cols="30" id="address" name="address"></textarea></td>
-            </tr>
-            <tr>
-                <td><label for="fav_color">สีที่ชอบ</label></td>
-                <td>
-                    <select id="fav_color" name="fav_color" size="1">
-                        <option value="red">สีแดง</option>
-                        <option value="green">สีเขียว</option>
-                        <option value="blue">สีน้ำเงิน</option>
-                        <option value="yellow">สีเหลือง</option>
-                        <option value="black">สีดำ</option>
-                        <option value="white">สีขาว</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td><label for="fav_song">แนวเพลงที่ชอบ</label></td>
-                <td>
-                    <input type="radio" id="forlife" name="fav_song" value="forlife">
-                    <label for="forlife">เพื่อชีวิต</label>
-                    <input type="radio" id="EsanSong" name="fav_song" value="EsanSong">
-                    <label for="EsanSong">ลูกทุ่ง</label>
-                    <input type="radio" id="etc" name="fav_song" value="etc">
-                    <label for="etc">อื่นๆ</label>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <br>
-                    <input type="checkbox" id="permission" name="permission">
-                    <label for="permission">ยินยอมให้เก็บข้อมูล</label>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <br>
-                    <input type="reset" value="Reset">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                    <input type="submit" value="Submit">
-                </td>
-            </tr>
-        </table>
-    </form>
+    <div class="container mt-5">
+        <h1 class="text-center text-primary mb-4">WORKSHOP #HTML-FORM</h1>
+        <form class="border p-4 rounded shadow bg-white">
+            <div class="mb-3">
+                <label for="fname" class="form-label">ชื่อ</label>
+                <input type="text" class="form-control" id="fname" name="fname" required>
+            </div>
+            <div class="mb-3">
+                <label for="lname" class="form-label">สกุล</label>
+                <input type="text" class="form-control" id="lname" name="lname">
+            </div>
+            <div class="mb-3">
+                <label for="birthday" class="form-label">วัน/เดือน/ปีเกิด</label>
+                <input type="date" class="form-control" id="birthday" name="birthday">
+            </div>
+            <div class="mb-3">
+                <label for="age" class="form-label">อายุ</label>
+                <input type="number" class="form-control" id="age" name="age">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">เพศ</label><br>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="male" name="sex" value="male">
+                    <label class="form-check-label" for="male">ชาย</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="female" name="sex" value="female">
+                    <label class="form-check-label" for="female">หญิง</label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="picture" class="form-label">รูป</label>
+                <input type="file" class="form-control" id="picture" name="picture">
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">ที่อยู่</label>
+                <textarea class="form-control" id="address" name="address" rows="3"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="fav_color" class="form-label">สีที่ชอบ</label>
+                <select class="form-select" id="fav_color" name="fav_color">
+                    <option value="red">สีแดง</option>
+                    <option value="green">สีเขียว</option>
+                    <option value="blue">สีน้ำเงิน</option>
+                    <option value="yellow">สีเหลือง</option>
+                    <option value="black">สีดำ</option>
+                    <option value="white">สีขาว</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">แนวเพลงที่ชอบ</label><br>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="forlife" name="fav_song" value="forlife">
+                    <label class="form-check-label" for="forlife">เพื่อชีวิต</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="EsanSong" name="fav_song" value="EsanSong">
+                    <label class="form-check-label" for="EsanSong">ลูกทุ่ง</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="etc" name="fav_song" value="etc">
+                    <label class="form-check-label" for="etc">อื่นๆ</label>
+                </div>
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="permission" name="permission">
+                <label class="form-check-label" for="permission">ยินยอมให้เก็บข้อมูล</label>
+            </div>
+            <div class="d-flex justify-content-between">
+                <button type="reset" class="btn btn-secondary">Reset</button>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
